--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -54,7 +54,7 @@ header
   // margin-bottom: 110px oldoptin
   margin-bottom: 45px
   @media screen and (max-width:420px)
-    margin-bottom: 100px;
+    margin-bottom: 110px;
   .header-img
     padding-left: 0px
     padding-right: 0px
