--- a/src/css/pages/launch-squeeze.styl
+++ b/src/css/pages/launch-squeeze.styl
@@ -439,13 +439,14 @@
   .fb-like-frame
     background-color: #0f1033;
     position: relative;
-    z-index: 10;
+    z-index: 12;
   .loading
     height: 80px
     margin-bottom: -85px
     padding-top: 20px
     text-align: center;
     z-index: 11
+    position: relative;
   .fb-like
     background-color: #0f1033;
   .fb-comments
